--- a/server/package.json
+++ b/server/package.json
@@ -13,12 +13,14 @@
   "description": "",
   "dependencies": {
     "@prisma/client": "^6.10.1",
+    "axios": "^1.10.0",
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
-    "nodemailer": "^7.0.3"
+    "nodemailer": "^7.0.3",
+    "qs": "^6.14.0"
   },
   "devDependencies": {
     "prisma": "^6.10.1"
